<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/test_img" />

    <LinearLayout
        android:id="@+id/news_item_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/tvDateAdded"
            style="@style/b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_example"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/card_title_example2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tvText"
            style="p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="6sp"
            android:singleLine="false"
            android:text="@string/lorem_small"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/btnShowMore"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:backgroundTint="#FFFFFF"
            android:text="показать еще"
            android:textColor="@color/primary_blue"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        android:backgroundTint="@color/gray" />

</LinearLayout>